# inference-ai-with-cpp

./: .gitignore  README.md  cmake-setup.sh
Detectron2-Cpp/: CMakeLists.txt  README.md  inference.cpp  libtorch-setup.sh
Detectron2-Cpp/src/: get_model.py
Logistic-Regression-Cpp/: CMakeLists.txt  README.md  main.cpp  requirements.txt
Logistic-Regression-Cpp/LogisticRegression/: LogisticRegression.cpp
Logistic-Regression-Cpp/dataset/: stroke-data-processed.csv
Logistic-Regression-Cpp/src/: data_preprocessing.py
detectron2/: get_model.sh
lite-ai-toolkit/: CMakeLists.txt  README.md  build.sh  predict_images.cpp  predict_video.cpp
lite-ai-toolkit/lite.ai.toolkit/include/lite/: config.h
lite-ai-toolkit/lite/ort/cv/: scrfd.cpp  scrfd.h
lite-ai-toolkit/model/: scrfd_500m_bnkps_shape640x640.onnx
logistic-regression/: eigen-setup.sh  main-project.sh
logistic-regression/ETL/: ETL.cpp  ETL.h
logistic-regression/LogisticRegression/: LogisticRegression.h
