cmake_minimum_required(VERSION 3.10 FATAL_ERROR)
project(d2)
SET(CMAKE_PREFIX_PATH "/usr/lib/x86_64-linux-gnu/cmake")
list(APPEND CMAKE_PREFIX_PATH "${CMAKE_CURRENT_LIST_DIR}/libtorch")
find_package(Torch REQUIRED)
find_package(OpenCV REQUIRED)
list(APPEND CMAKE_PREFIX_PATH "${CMAKE_CURRENT_LIST_DIR}/vision")
find_package(TorchVision REQUIRED)
include_directories( ${OpenCV_INCLUDE_DIRS} )
find_package(Python3 COMPONENTS Development)

message( "Current dir: ${CMAKE_CURRENT_LIST_DIR}" )
message(STATUS "Pytorch status:")
message(STATUS "    libraries: ${TORCH_LIBRARIES}")
message(STATUS "OpenCV status:")
message(STATUS "    libraries: ${OpenCV_INCLUDE_DIRS}")
message(STATUS "Torchvision status:")
message(STATUS "    libraries: ${TorchVision_LIBRARIES}")

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${TORCH_CXX_FLAGS}")
add_executable(d2 inference.cpp)
target_link_libraries(d2 TorchVision::TorchVision ${TORCH_LIBRARIES} ${OpenCV_LIBS} ${TorchVision_LIBRARIES} Python3::Python)
set_property(TARGET d2 PROPERTY CXX_STANDARD 14)
